--- a/sass-demo3.html
+++ b/sass-demo3.html
@@ -1,20 +1,11 @@
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>@Mixin and @include Example</title>
-        <link rel="stylesheet" href="css/sass-demo3.css">
-<<<<<<< HEAD
-        
-=======
->>>>>>> 8e0dc694d90ab701b9eecb977af43f633a3442e5
-    </head>
+<head>
+  <title>SCSS Demo 3</title>
+  <link rel="stylesheet" href="css/sass-demo3.css">
+</head>
 <body>
-
     <h1>Hello World</h1>
-
-    <p class="danger">Warning! This is some text.</p>
-
+    <div class="warning">Warning! This is some text.</div>    
 </body>
 </html>
-
